@@ -1694,12 +1694,21 @@ function RefreshWeathers()
 						}
 						else if (typeof item.Direction != 'undefined') {
 							img='<img src="images/Wind' + item.DirectionStr + '.png" height="48">';
-							status=item.Direction + ' ' + item.DirectionStr + ', Speed: ' + item.Speedms + ' ms';
+							status=item.Direction + ' ' + item.DirectionStr;
+							if (typeof item.Speedms != 'undefined') {
+								status+=', Speed: ' + item.Speedms + ' ms';
+							}
 							if (typeof item.Gustms != 'undefined') {
 								status+=', Gust: ' + item.Gustms + ' ms';
 							}
 							status+='<br>\n';
-							bigtext=item.DirectionStr + ' / ' + item.Speedms + ' ms';
+							bigtext=item.DirectionStr;
+							if (typeof item.Speedms != 'undefined') {
+								bigtext+=  '/ ' + item.Speedms + ' ms';
+							}
+							else if (typeof item.Gustms != 'undefined') {
+								bigtext+=  '/ ' + item.Gustms + ' ms';
+							}
 							if ((typeof item.Temp != 'undefined')&&(typeof item.Chill != 'undefined')) {
 								status+='Temp: ' + item.Temp + '\u00B0 C, ';
 								status+='Chill: ' + item.Chill + '\u00B0 C';
@@ -1808,10 +1817,16 @@ function ShowWeathers()
 						xhtm+=item.UVI + ' UVI';
 					}
 					else if (typeof item.Direction != 'undefined') {
-						xhtm+=item.DirectionStr + ' / ' + item.Speedms + ' ms';
+						xhtm+=item.DirectionStr;
+					}
+					if (typeof item.Speedms != 'undefined') {
+						xhtm+=' / ' + item.Speedms + ' ms';
+					}
+					else if (typeof item.Gustms != 'undefined') {
+						xhtm+=' / ' + item.Gustms + ' ms';
 					}
 					xhtm+='</td>\n';
-          xhtm+='\t      <td id="img"><img src="images/';
+					xhtm+='\t      <td id="img"><img src="images/';
 					if (typeof item.Barometer != 'undefined') {
 						bHaveBaro=true;
 						xhtm+='baro48.png" height="48"></td>\n' +
@@ -1844,7 +1859,10 @@ function ShowWeathers()
 					else if (typeof item.Direction != 'undefined') {
 						bHaveWind=true;
 						xhtm+='Wind' + item.DirectionStr + '.png" height="48"></td>\n' +
-						'\t      <td id="status">' + item.Direction + ' ' + item.DirectionStr + ', Speed: ' + item.Speedms + ' ms';
+						'\t      <td id="status">' + item.Direction + ' ' + item.DirectionStr;
+						if (typeof item.Speedms != 'undefined') {
+							xhtm+=', Speed: ' + item.Speedms + ' ms';
+						}
 						if (typeof item.Gustms != 'undefined') {
 							xhtm+=', Gust: ' + item.Gustms + ' ms\n';
 						}
